css/style.css
/* ------------------------
----------CONFIG-----------
------------------------  */
:root {
    --glowGreen: rgb(51,236,193);
    --glowDarkGreen: rgb(61,190,200);
    --white: #ebefff;
    --glowBlue: rgb(105,220,253);
    --darkBlue: rgb(0,125,245);
}
h1, h2{
    color: var(--glowGreen);
}
h6, h5, h4, h3{
    color: var(--white);
}
a{
    color: var(--glowBlue);
}
.fa-brands{
    color: var(--glowGreen);
    font-size: 2.25rem;
}
#currentVal{
    display: none;
}

/* ------------------------
----------SCROLLBAR-----------
------------------------  */

::-webkit-scrollbar {
    width: 2.2rem;
}
::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: var(--darkBlue);
    background-image: -webkit-linear-gradient(90deg, transparent, var(--glowDarkGreen) 50% , transparent, transparent);
    border: 6px solid black;
    margin-right: 2px;
}

/* ::-webkit-scrollbar-track {
    padding-right: 5px;
} */

/* ------------------------
----------TOP TEXT-----------
------------------------  */
#contentSection{
    border: 4px solid var(--glowGreen);
    background-color: rgba(255,255,255,.1);
    width: 90vw;
    /* max-width: 100%; */
    height: 88vh;
    border-radius: 1.5rem;
    padding: 1rem;
    padding-top: 3rem;
    overflow-y: scroll;
    overflow-x: hidden;
}
#text h5{
    padding-top: 1.25em;
}
#text h6{
    padding-bottom: 1.1em;
}
#text h6,h5{
    text-align: center;
}

/* ------------------------
----------MID STATS-----------
------------------------  */

#mainColumn{
    width: 100%;
}
#mainColumn>h2{
    text-align: center;
}
#statsCont{
    text-align: center;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}
#statsCont div{
    padding: 1em 1.15em;
    width: 33%;
}
.stats{
    padding-top: 1.5rem;
    box-sizing: border-box;
    max-width: 33.33%;
    width: fit-content;
}

/* ------------------------
----------LOWER CHARTS-----------
------------------------  */

#dataCont{
    width: 100%;
    padding-top: 5rem;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
.data{
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    max-width: 50%;
}
.data h4{
    text-align: center;
}
iframe{
    width: 500px;
    height: 300px;
    border-radius: 3rem;
    border: 5px solid var(--darkBlue);
}
#chartBox{
    display: flex;
    align-items: center;
    width: 500px;
    height: 300px;
    border: 5px solid var(--darkBlue);
    border-radius: 3rem;
}
#passedOverChart{
    padding: 1em;
}

/* ------------------------
----------MEDIA QUERIES-----------
------------------------  */

@media screen and (max-width: 1140px) {
    #statsCont{
        flex-direction: column;
    }
    #statsCont > div{
        width: 100%;
        max-width: 100%;
    }
    .stats{
        max-width: 100%;
        width: 100%;
        height: fit-content;
        padding-top: 1rem;
    }
}

 @media screen and (max-width: 1275px) {

    #dataCont{
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .data:last-child{
        padding-top: 4.5em;
    }
    .data{
        align-items: center;
        width: 100%;
        max-width: 100%;
    }
    #chartBox{
        width: 700px;
        height: 400px;
    }
    iframe{
        width: 700px;
        height: 400px;
    }
}

@media screen and (max-width: 900px) {

    #chartBox, iframe{
        width: 500px;
        height: 300px;
    }
}

@media screen and (max-width: 675px) {

    #chartBox, iframe{
        width: 90%;
        height: 300px;
    }
}

